# TelegramGroupie

./: .bandit  .gitignore  .pre-commit-config.yaml  .safety-project.ini  Dockerfile  Dockerfile.test  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SECURITY_INCIDENT_REPORT.md  build.sh  debug_ci.py  docker-compose.fast-test.yml  docker-compose.minimal.yml  docker-compose.simple.yml  docker-compose.test.yml  encryption.py  firestore.indexes.json  get-pip.py  interfaces.py  main.py  main_backup.py  main_refactored.py  main_simplified.py  mock_encryption.py  mock_firestore.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_local.py  service_container.py  sonar-project.properties  test_refactor_demo.py
.github/: CODEOWNERS
.github/workflows/: docker-tests.yml  python-app.yml  quality-report.yml  static-analysis.yml
config/: local.env
configuration/: environment.env.template  sonar-project.properties
devops/.github/: CODEOWNERS
devops/scripts/: backup-kms-config.sh  check-kms-health.sh  run-basic-docker-test.sh  setup-gcp-project.sh  validate-deployment.py
docs/: API_AUTHORIZATION.md  ARCHITECTURE.md  BRANCH_PROTECTION_SETUP.md  CI_CD_PIPELINE.md  CI_WORKFLOW_GUIDE.md  DEPENDENCY_INJECTION_REFACTOR.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VALIDATION.md  DOCKER_TESTING.md  KMS_KEY_PROTECTION.md  LOCAL_DEVELOPMENT_SETUP.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE.md  TESTING.md
implementations/: __init__.py  production.py  test.py
infrastructure/: build.sh
infrastructure/docker/: Dockerfile  Dockerfile.test  docker-compose.fast-test.yml  docker-compose.test.yml
infrastructure/requirements/: requirements.txt
scripts/: deploy.sh  run-basic-docker-test.sh  run-docker-compose-tests.sh  run-tests.sh  setup-gcp-project.sh  verify-branch-protection.sh
src/implementations/: production.py
test-results/: junit.xml  report.html
tests/: README.md  __init__.py  test_all.py  test_encryption.py  test_integration.py  test_integration_docker.py  test_main.py  test_message_retrieval.py
tests/docker/: __init__.py  test_integration_docker.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_encryption.py  test_main.py  test_message_retrieval.py
